--- a/css/share.css
+++ b/css/share.css
@@ -110,7 +110,7 @@ h5 {
 
 p {
   color: #fff;
-  font-size: 1.4em;
+  font-size: 24px;
   font-family: "Lora" sans-serif;
   text-align: center;
   justify-content: center;
@@ -118,13 +118,13 @@ p {
 
 @media screen and (min-width: 750px) and (max-width: 1200px) {
   p {
-    font-size: 1.2em;
+    font-size: 22px;
   }
 }
 
 @media screen and (min-width: 280px) and (max-width: 680px) {
   p {
-    font-size: 1em;
+    font-size: 18px
   }
 }
 
